# backend/src/routes/auth.js
@@ -1,9 +1,9 @@
 import { Router } from 'express'
-import { register, login, me } from '../controllers/authController.js'
+import { login, me } from '../controllers/authController.js'
 import { requireAuth } from '../middlewares/authMiddleware.js'
 
 const r = Router()
-r.post('/register', register)
+
 r.post('/login', login)
 r.get('/me', requireAuth, me)
 
